<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/left_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Custom_White_Background"
    tools:context="glipped.com.glipped.ContactUs.ContactUs">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/Glipped_Logo_Orange"
            app:theme="@style/ToolBarStyle">

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/contact_us_main_body"
            android:layout_below="@id/toolbar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dp"
            android:background="@color/Custom_White_Background">

            <glipped.com.glipped.Tools.CustomTextViews.LatoRegularTextView
                android:id="@+id/contact_us_text_view_location"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textColor="@color/Custom_Primary_Text_Color"
                android:textSize="16sp"
                android:text="@string/location_text_view"/>

            <glipped.com.glipped.Tools.CustomTextViews.LatoLiteTextView
                android:id="@+id/contact_us_text_view_location_text_usa"
                android:layout_below="@id/contact_us_text_view_location"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textSize="18sp"
                android:textColor="@color/Custom_Secondary_Text_Icon_Color"
                android:text="@string/location_usa"/>

            <glipped.com.glipped.Tools.CustomTextViews.LatoLiteTextView
                android:id="@+id/contact_us_text_view_location_text_india"
                android:layout_below="@id/contact_us_text_view_location_text_usa"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textSize="18sp"
                android:textColor="@color/Custom_Secondary_Text_Icon_Color"
                android:text="@string/location_india"/>

            <glipped.com.glipped.Tools.CustomTextViews.LatoRegularTextView
                android:id="@+id/contact_us_text_view_email"
                android:layout_below="@id/contact_us_text_view_location_text_india"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textColor="@color/Custom_Primary_Text_Color"
                android:textSize="16sp"
                android:text="@string/mail_text_view"/>

            <glipped.com.glipped.Tools.CustomTextViews.LatoLiteTextView
                android:id="@+id/contact_us_text_view_email_address"
                android:layout_below="@id/contact_us_text_view_email"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textSize="18sp"
                android:textColor="@color/Custom_Secondary_Text_Icon_Color"
                android:text="@string/mail_address"/>

            <glipped.com.glipped.Tools.CustomTextViews.LatoRegularTextView
                android:id="@+id/contact_us_text_view_telephone"
                android:layout_below="@id/contact_us_text_view_email_address"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textColor="@color/Custom_Primary_Text_Color"
                android:textSize="16sp"
                android:text="@string/telephone_text_view"/>

            <glipped.com.glipped.Tools.CustomTextViews.LatoLiteTextView
                android:id="@+id/contact_us_text_view_telephone_us"
                android:layout_below="@id/contact_us_text_view_telephone"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textSize="18sp"
                android:textColor="@color/Custom_Secondary_Text_Icon_Color"
                android:text="@string/telephone_us"/>

            <glipped.com.glipped.Tools.CustomTextViews.LatoLiteTextView
                android:id="@+id/contact_us_text_view_telephone_india"
                android:layout_below="@id/contact_us_text_view_telephone_us"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:textSize="18sp"
                android:textColor="@color/Custom_Secondary_Text_Icon_Color"
                android:text="@string/telephone_india"/>

            <View
                android:id="@+id/contact_us_divider_one"
                android:layout_below="@id/contact_us_text_view_telephone_india"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:background="@color/Custom_Divider_Color"/>

            <Button
                android:id="@+id/button_send_a_message"
                android:layout_below="@id/contact_us_divider_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Send Us a Message"/>

        </RelativeLayout>

    </RelativeLayout>

    <include
        android:layout_height="fill_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        layout="@layout/left_drawer_layout"/>

</android.support.v4.widget.DrawerLayout>


