<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/left_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Custom_White_Background"
    tools:context=".Home">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/Glipped_Logo_Orange"
            app:theme="@style/ToolBarStyle">

        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/toolbar"
            android:padding="10dp">

            <glipped.com.glipped.Tools.CustomTextViews.LatoLiteTextView
                android:id="@+id/home_text_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/Glipped_Logo_Orange"
                android:text="@string/home_text_heading"/>

            <glipped.com.glipped.Tools.CustomTextViews.LatoLiteTextView
                android:id="@+id/home_text_body_one"
                android:layout_below="@id/home_text_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="22sp"
                android:textColor="@color/primary_text_default_material_light"
                android:text="@string/home_text_body_one"/>

            <glipped.com.glipped.Tools.CustomTextViews.LatoLiteTextView
                android:id="@+id/home_text_body_two"
                android:layout_below="@id/home_text_body_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="22sp"
                android:textColor="@color/primary_text_default_material_light"
                android:text="@string/home_text_body_two"/>

        </RelativeLayout>

    </RelativeLayout>

    <include
        android:layout_height="fill_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        layout="@layout/left_drawer_layout"/>

</android.support.v4.widget.DrawerLayout>


